@@ -291,7 +291,8 @@ show_backends_in_table=0
 # and other confidential data.
 # In order to replace the user macros for commands, you have to set
 # the 'resource_file' in your peer config or a general resource_file
-# option. See the next option.
+# option and set 'expand_user_macros' to a safe set of macros to expand.
+# See the next option.
 # 0 = off, don't show the command line at all
 # 1 = show them for all with the role: authorized_for_configuration_information
 # 2 = show them for everyone
@@ -304,9 +305,8 @@ show_full_commandline = 1
 # 'show_full_commandline_source' to '_CUST_VAR_NAME'.
 show_full_commandline_source = check_command
 
-# set a general resource file. Make sure it does not
-# contain any passwords or any other data which should not be
-# displayed.
+# Set a general resource file. If used in combination with 'expand_user_macros'
+# be aware that passwords could be exposed if configured to expand the wrong macros.
 # Instead of using a general resource_file, you could define one file
 # per peer in your peer config.
 #
@@ -344,6 +344,20 @@ shown_inline_pnp = 1
 # Use * as wildcard, ex.: _VAR*
 #show_custom_vars = _VAR1
 #show_custom_vars = _VAR2
+
+
+# Expand user macros ($USERx$) for host / service
+# commands and custom variables.
+# Can be specified more than once to define multiple
+# user macros to expand. Specifiying 'ALL' will expand
+# all $USERx$ macros.
+# Be warned: some user macros can contain passwords
+# and expanding them could expose them to unauthorized
+# users.
+#expand_user_macros = $USER1$
+#expand_user_macros = $USER2$
+#expand_user_macros = ALL # expands all $USERx$ macros
+
 
 # show if a host / service has modified attributes.
 show_modified_attributes = 1
@@ -782,7 +796,7 @@ cookie_auth_session_cache_timeout = 5
     #       {\
     #           "icon": "/thruk/themes/{{theme}}/images/arrow_refresh.png",\
     #           "label": "Refresh",\
-    #           "action": "server://refresh/$SERVICEDESC$",\
+    #           "action": "server://refresh/$HOSTNAME/$SERVICEDESC$",\
     #           "target": "_blank"\
     #       },\
     #   ]\
@@ -790,7 +804,7 @@ cookie_auth_session_cache_timeout = 5
 </action_menu_items>
 
 <action_menu_actions>
-    #example   = /usr/local/bin/sample.sh $HOSTNAME$ $SERVICEDESC$
+    #example   = /usr/local/bin/sample.sh $HOSTNAME$ $SERVICEDESC$ $USER20$
     #refresh   = /usr/local/bin/refresh.sh otherargs
 </action_menu_actions>
 
